--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ packaging==24.2
 pathspec==0.12.1
 pep8-naming==0.13.2
 platformdirs==4.3.6
+psycopg2-binary==2.9.10
 pycodestyle==2.9.1
 pyflakes==2.5.0
+python-dotenv==1.0.1
 sqlparse==0.5.2
 tzdata==2024.2
